--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: sezerb Blog
-subtitle: This is where I will tell my friends way too much about me
+title: Blog
+subtitle: Blog posts may be both in Turkish and English.
 ---
