--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: home
-title: Blog
-subtitle: Blog posts may be both in Turkish and English.
+layout: page
+title: Blog / Günce
+subtitle: Blog posts may be in Turkish or in English. Günceler Türkçe veya İngilizce olabilir.
 ---
